--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <div class="navbar-inner">
       <a class="brand" href="#/">zanox API client</a>
       <ul class="nav">
-        <li ng-class="{active: routeIs('/')}"><a href="#/">Home</a></li>
+        <li ng-class="{active: routeIs('/')}"><a href="#/">Products</a></li>
         <li ng-class="{active: routeIs('/how-it-works')}"><a href="#/how-it-works">How it works</a></li>
         <li ng-class="{active: routeIs('/who-we-are')}"><a href="#/who-we-are">Who we are</a></li>
       </ul>
