added first version of client side files for zanox connect and api access (not yet working

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,14 @@
 <script src="js/services/localStorage.js"></script>
 <script src="js/services/cart.js"></script>
 <script src="js/services/Restaurant.js"></script>
+<script src="js/services/signature.js"></script>
+
+<!-- cryptography scripts for zanox connect -->
+<!-- from http://code.google.com/p/crypto-js/ -->
+<script src="lib/crypto-sha1.js" type="text/javascript"></script>
+<script src="lib/hmac-min.js" type="text/javascript"></script>
+    <!-- from http://pajhome.org.uk/crypt/md5/scripts.html -->
+<script src="lib/md5-min.js" type="text/javascript"></script>
 
 </body>
 </html>
