added first version of zx connect handling

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
 <script src="js/services/cart.js"></script>
 <script src="js/services/Restaurant.js"></script>
 <script src="js/services/signature.js"></script>
+<script src="js/services/zxConnect.js"></script>
 
 <!-- cryptography scripts for zanox connect -->
 <!-- from http://code.google.com/p/crypto-js/ -->
