--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
 <script src="js/services/Restaurant.js"></script>
 <script src="js/services/signature.js"></script>
 <script src="js/services/zxConnect.js"></script>
+<script src="js/services/zxConnectSessionFacade.js"></script>
 
 <!-- cryptography scripts for zanox connect -->
 <!-- from http://code.google.com/p/crypto-js/ -->
