--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
 <script src="js/services/signature.js"></script>
 <script src="js/services/zxConnect.js"></script>
 <script src="js/services/zxConnectSessionFacade.js"></script>
+<script src="js/services/zxConnectAuth.js"></script>
 
 <!-- cryptography scripts for zanox connect -->
 <!-- from http://code.google.com/p/crypto-js/ -->
