--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
       <a class="brand" href="#/">zanox API client</a>
       <ul class="nav">
         <li ng-class="{active: routeIs('/')}"><a href="#/">Products</a></li>
+        <li ng-class="{active: routeIs('/profile')}"><a href="#/profile">Profile</a></li>
         <li ng-class="{active: routeIs('/how-it-works')}"><a href="#/how-it-works">How it works</a></li>
         <li ng-class="{active: routeIs('/who-we-are')}"><a href="#/who-we-are">Who we are</a></li>
       </ul>
@@ -37,6 +38,7 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular/angular-resource.js"></script>
 <script src="js/app.js"></script>
+<script src="js/controllers/ProfileController.js"></script>
 <script src="js/controllers/CheckoutController.js"></script>
 <script src="js/controllers/CustomerController.js"></script>
 <script src="js/controllers/MenuController.js"></script>
