replaced foodMeApp by zxApiClient

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="foodMeApp">
+<html lang="en" ng-app="zxApiClient">
 <head>
   <meta charset="utf-8">
   <title>zanox API client</title>
