--- a/app/index.html
+++ b/app/index.html
@@ -53,10 +53,8 @@
 <script src="js/services/localStorage.js"></script>
 <script src="js/services/cart.js"></script>
 <script src="js/services/Restaurant.js"></script>
-<script src="js/services/signature.js"></script>
-<script src="js/services/zxConnect.js"></script>
-<script src="js/services/zxConnectSessionFacade.js"></script>
-<script src="js/services/zxConnectAuth.js"></script>
+<script src="js/services/zxPublisherApiFacade.js"></script>
+<script src="js/services/auth.js"></script>
 
 <!-- cryptography scripts for zanox connect -->
 <!-- from http://code.google.com/p/crypto-js/ -->
